2012-05-16 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/pandora_xml_stress.conf: Fixed a wrong default configuration file
	for pandora_xmk_stress

	MERGED FROM 4.0.2

2012-05-11  Junichi Satoh <junichi@rworks.jp>

	* ChangeLog: Fixed conflict with previous commit. (Added lost lines.)
	
2012-05-10  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm: Added the macro _alert_text_severity_ to
	the alerts

2012-05-10  Junichi Satoh <junichi@rworks.jp>

	* FreeBSD/pandora_server.conf: Synchronized with the generic
	configuration file, conf/pandora_server.conf (better default values).

2012-05-09 Dario Rodriguez <dario.rodriguez@artica.es>

	* util/plugin/ipmi-plugin.pl,
	util/recon_scripts/ipmi-recon.pl: Fixed some bugs of plugin and
	recon

	MERGED FROM 4.0.2

2012-05-08  Sancho Lerena <slerena@artica.es>

	* conf/pandora_server.conf: Better default values.

2012-04-28  Junichi Satoh <junichi@rworks.jp>

	* lib/PandoraFMS/Core.pm: Added a missing argument to process_data()
	call.

2012-04-26  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Added call to delete the agent
	related nodes of the network map enterprise

2012-04-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Merged from 4.0 branch. Do not insert zeroes
	  when something goes wrong while processing an inc module. Fixes bug
	  #3519591.

2012-04-23  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/WMIServer.pm,
	  lib/PandoraFMS/PluginServer.pm: Simplified the calculation of
	  time_left to make sure it is always positive. Fixes bug #3519099.

2012-04-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Merged from 4.0 branch. Do not try to reset
	  the internal counter unless it is > 0. Fixed a warning.

2012-04-20  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm: Setted last_reference to current utimestamp
	in the alert table when create it
